--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,3 +1,5 @@
+[Senpais-Pipes]
+void=Void
 E-N-S=E N S
 E-S=E S
 E-W=E W
@@ -8,12 +10,19 @@ N-W=N W
 S-W=S W
 S-W-E=S W E
 W-N-S=W N S
-
-[item-name]
-straight-pipe=__1__ __2__
+E-N-S-void=E N S Void
+E-S-void=E S Void
+E-W-void=E W Void
+N-E-void=N E Void
+N-E-W-void=N E W Void
+N-S-void=N S Void
+N-W-void=N W Void
+S-W-void=S W Void
+S-W-E-void=S W E Void
+W-N-S-void=W N S Void
 
 [entity-name]
-straight-pipe=__1__ __2__
+Senpais-Pipes=__1__ __2__
 
 [item-group-name]
-Straight-Pipes-MOD=Straight Pipes
+Senpais-Pipes=Senpais Pipes
